HPCDATAMGM-1943: Remove table at bottom and replace with DIVs with bootrap style

--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -278,23 +278,21 @@ tfoot input {
 						</table>
 					</div>
 					<div style="text-align:right">
-						<table id="pageDetails2" class="display" style="width:100%">
-							<tr>
-								<p>Current page <span th:text="${currentPage}"/> of <span th:text="${totalPages}"/>&nbsp;&nbsp;|&nbsp;&nbsp;Page Size:  <span th:text="${currentPageSize}"/>&nbsp;&nbsp;|&nbsp;&nbsp;Total Records:  <span th:text="${totalCount}"/> </p>
-								<button type="button" id="btnFirst"
-									class="btn btn-md btn-primary" onclick="updatePage('first')">
-									First</button>&nbsp;
-								<button type="button" id="btnPrevious"
-									class="btn btn-md btn-primary"
-									onclick="updatePage('previous')">Previous</button>&nbsp;
-								<button type="button" id="btnNext"
-									class="btn btn-md btn-primary" onclick="updatePage('next')">
-									Next</button>&nbsp;
-								<button type="button" id="btnLast"
-									class="btn btn-md btn-primary" onclick="updatePage('last')">
-									Last</button>&nbsp;
-							</tr>
-						</table>
+						<p>Current page <span th:text="${currentPage}"/> of <span th:text="${totalPages}"/>&nbsp;&nbsp;|&nbsp;&nbsp;Page Size:  <span th:text="${currentPageSize}"/>&nbsp;&nbsp;|&nbsp;&nbsp;Total Records:  <span th:text="${totalCount}"/> </p>
+						<div class="form-group col-md-12">
+						<button type="button" id="btnFirst"
+							class="btn btn-md btn-primary" onclick="updatePage('first')">
+							First</button>&nbsp;
+						<button type="button" id="btnPrevious"
+							class="btn btn-md btn-primary"
+							onclick="updatePage('previous')">Previous</button>&nbsp;
+						<button type="button" id="btnNext"
+							class="btn btn-md btn-primary" onclick="updatePage('next')">
+							Next</button>&nbsp;
+						<button type="button" id="btnLast"
+							class="btn btn-md btn-primary" onclick="updatePage('last')">
+							Last</button>&nbsp;
+						</div>
 					</div>
 				</div></div></div>
 			</section>
