HPCDATAMGM-1943: Make Show and Entried equidistant

--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -183,8 +183,8 @@ tfoot input {
 						<div class="form-group">
 							<div class="col-md-offset-4">
 								<div class="col-md-7">
-									<label for="pageSizeId1" class="control-label"><b>Show</b>&nbsp;&nbsp;</label>
-									<label for="pageSizeId1" class="col-md-2 control-label" style="float:right;"><b>Entries</b></label>
+									<label for="pageSizeId1"><b>Show</b>&nbsp;&nbsp;</label>
+									<label for="pageSizeId1" style="float:right;"><b>&nbsp; Entries</b></label>
 									<select name="pageSizeName1" id="pageSizeId1"
 										class="form-control" style="width: 85px; float:right;">
 										<option value="100" class="bold-option" th:selected="${pageSize} == '100'">100</option>
