--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -181,8 +181,8 @@ tfoot input {
 					<div class="div2">
 						<p>Current page <span th:text="${currentPage}"/> of <span th:text="${totalPages}"/>&nbsp;&nbsp;|&nbsp;&nbsp;Page Size:  <span th:text="${currentPageSize}"/>&nbsp;&nbsp;|&nbsp;&nbsp;Total Records:  <span th:text="${totalCount}"/>&nbsp;&nbsp;&nbsp; </p>
 						<div class="form-group">
-							<div class="col-md-offset-4">
-								<div class="col-md-7">
+							<div>
+								<div class="col-md-9">
 									<label for="pageSizeId1"><b>Show</b>&nbsp;&nbsp;</label>
 									<label for="pageSizeId1" style="float:right;"><b>&nbsp; Entries</b></label>
 									<select name="pageSizeName1" id="pageSizeId1"
@@ -193,7 +193,7 @@ tfoot input {
 										<option value="1000" class="bold-option" th:selected="${pageSize} == '1000'">1000</option>
 									</select>
 								</div>
-								<div class="col-md-5"  style="float:right;">
+								<div class="col-md-3"  style="float:right;">
 									<button type="button" id="btnFirstTop"
 										class="btn btn-md btn-primary" onclick="updatePage('first')">
 										First</button>&nbsp;
