HPCDATAMGM-1943: Remove float: right for buttons to let display flex to handle it

--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -193,7 +193,7 @@ tfoot input {
 										<option value="1000" class="bold-option" th:selected="${pageSize} == '1000'">1000</option>
 									</select>
 								</div>
-								<div style="float:right;">
+								<div>
 									<button type="button" id="btnFirstTop"
 										class="btn btn-md btn-primary" onclick="updatePage('first')">
 										First</button>&nbsp;
