--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -184,7 +184,7 @@ tfoot input {
 							<div style="display: flex; float: right;">
 								<div>
 									<label for="pageSizeId1"><b>Show</b>&nbsp;&nbsp;</label>
-									<label for="pageSizeId1" style="float:right;"><b>&nbsp;Entries&nbsp;</b></label>
+									<label for="pageSizeId1" style="float:right;"><b>&nbsp;Entries&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></label>
 									<select name="pageSizeName1" id="pageSizeId1"
 										class="form-control" style="width: 85px; float:right;">
 										<option value="100" class="bold-option" th:selected="${pageSize} == '100'">100</option>
