--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -220,6 +220,8 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', f
 											<td id='col5' th:text="${result.created}"></td>
 											<td id='col6' th:text="${result.completed}"></td>
 											<td id='col7' th:text="${result.error}"></td>
+											<td id='col8' style="visibility: hidden;" th:text="${result.sortCreated}"></td>
+											<td id='col9' style="visibility: hidden;" th:text="${result.sortCompleted}"></td>
 										</tr>
 									</tbody>
 									<tfoot>
@@ -327,13 +329,15 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', f
 				"aaSorting": [],
 				dom: 'rt',
 				scrollX : 'TRUE',
-				columnDefs: [ {targets: 0, width:100, visible: queryAll}, //userId
-							  {targets: 1, width:250, visible: true},  // taskId
-							  {targets: 2, width: 110, visible: true},  // source type
-							  {targets: 3, width: 100, visible: true},  // transfer result
-							  {targets: 4, width: 110, visible: true},  // created
-							  {targets: 5, width: 110, visible: true},  // completed
-							  {targets: 6, width: 200, data: 'error', type: 'non-empty-string', render: DataTable.render.ellipsis( 40, true )}, // error
+				columnDefs: [ {targets: 0,  data: 'userId', width:100, visible: queryAll}, //userId
+							{targets: 1, data: 'taskId', data: 'result', width:250, visible: true},  // taskId
+							{targets: 2, data: 'result', width: 110, visible: true},  // source type
+							{targets: 3, data: 'sourceType', data: 'result', width: 100, visible: true},  // transfer result
+							{targets: 4, data: 'created', width: 110, visible: true, orderData:[7]},  // created
+							{targets: 5, data: 'completed', width: 110, visible: true, orderData:[8]},  // completed
+							{targets: 6, data: 'error', width: 200, type: 'non-empty-string', render: DataTable.render.ellipsis( 40, true )}, // error
+							{targets: 7, data: 'sortCreated', visible: false, searchable: false},
+							{targets: 8, data: 'sortCompleted', visible: false, searchable: false}
 				],
 				"lengthMenu": [ [-1], ["All"] ],
 		} );
