--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -79,38 +79,77 @@
 				  <div>
 				  <!--panel-body start-->
 				    <div class="panel-body">
-
-
-
-	     <div>
-	      <form class="form-horizontal" id="downloadForm"
-			th:object="${hpcDownloadDatafile}" method="POST">
-
-
-			<div class="pull-center" th:if="${downloadType == 'datafile'}">
-			  <p>This page allows you to download the selected data file either synchronously to your computer (file system), or asynchronously to a Globus endpoint, an AWS S3 bucket, Google Drive, Google Cloud or dbGaP.</p>
-			</div>
-			<div class="pull-center" th:if="${downloadType == 'collection' or searchType == 'async'}">
-              <p>This page allows you to download the selected collection to a Globus endpoint, an AWS S3 bucket, Google Drive, Google Cloud or dbGaP.</p>
-            </div>
-     
-			<div class="panel panel-default">
-				<div class="panel-body">
-
-					<table>
-						<tr><td><div th:if="${downloadType == 'datafile'}">Selected File:</div>
-						<div th:if="${downloadType == 'collection'}">Selected Collection:</div><br/>
-						<div class="display: block;" style="word-break: break-all">
-							<label th:text="${downloadFilePath}"></label> 
+				    <div>
+				      <form class="form-horizontal" id="downloadForm"
+						th:object="${hpcDownloadDatafile}" method="POST">
+						<div class="pull-center" th:if="${downloadType == 'datafile'}">
+						  <p>This page allows you to download the selected data file either synchronously to your computer (file system), or asynchronously to a Globus endpoint, an AWS S3 bucket, Google Drive, Google Cloud or dbGaP.</p>
 						</div>
-						</td></tr>
-						<div th:if="${downloadType == 'collection'}">
-							<tr><td>&nbsp;</td></tr>
-							<tr><td>Destination Location:</td></tr>
-						</div>
-						<tr>
-							<td>
-								<div class="form-group" id="radioset2">
+						<div class="pull-center" th:if="${downloadType == 'collection' or searchType == 'async'}">
+			              <p>This page allows you to download the selected collection to a Globus endpoint, an AWS S3 bucket, Google Drive, Google Cloud or dbGaP.</p>
+			            </div>
+						<div class="panel panel-default">
+							<div class="panel-body">
+								<div style="display:flex; flex-direction: column; align-items:left">
+									<div th:if="${downloadType == 'datafile'}">Selected
+										File:</div>
+									<div th:if="${downloadType == 'collection'}">Selected
+										Collection:</div>
+									<br />
+									<div class="display: block;" style="word-break: break-all">
+										<label th:text="${downloadFilePath}"></label>
+									</div>
+									<br />
+								<div class="alert alert-info pull-left" role="alert"
+									id="message" style="display: none; float: left">
+									<p>&nbsp;</p>
+								</div>
+								<div class="pull-left" id="wait"
+									style="display: none; float: left">
+									<p>&nbsp;</p>
+								</div>
+								<div style="width: 100%">
+									<div class="form-group" id="radioset">
+										<p style="margin-left: 15px">Transfer Type:</p>
+										<div class="pull-left" style="margin-left: 15px"
+											th:if="${downloadType == 'datafile'}">
+											<label class="radio-inline"><input type="radio"
+												id="searchTypeSync" name="searchType" value="sync"
+												onChange="display('sync')" checked="checked" />Local
+												System</label>
+										</div>
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+												name="searchType" id="searchTypeAsync" value="async"
+												onChange="display('async')" />Globus</label>
+										</div>
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+												name="searchType" id="searchTypeS3" value="s3"
+												onChange="display('s3')" />AWS S3</label>
+										</div>
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+												name="searchType" id="searchTypeDrive" value="drive"
+												onChange="display('drive')" />Google Drive</label>
+										</div>
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+												name="searchType" id="searchTypeGoogleCloud"
+												value="googleCloud" onChange="display('googleCloud')" />Google
+												Cloud</label>
+										</div>
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+												name="searchType" id="searchTypeAspera" value="aspera"
+												onChange="display('aspera')" />dbGaP</label>
+										</div>
+									</div>
+									<br/>
+								</div>
+								<div th:if="${downloadType == 'collection'}" style="width: 100%">
+									<div class="form-group" id="radioset2">
+										<p style="margin-left: 15px">Destination Location:</p>
 										<div class="pull-left" style="margin-left: 15px" th:if="${downloadType == 'collection'}">
 											<label class="radio-inline"><input type="radio"
 											name="downloadDestinationType" id="downloadToDestinationId" value="downloadToDestination" checked
@@ -126,63 +165,13 @@
 											name="downloadDestinationType" id="createFullPathId" value="createFullPath"
 											/>Create Full Path</label>
 										</div>
+									</div>
+									<br/>
 								</div>
-							</td>
-						</tr>
-						<tr><td>&nbsp;</td></tr>
-						<tr>
-							<td>
-								<div class="alert alert-info pull-left" role="alert" id="message"
-									style="display: none; float: left">
-									<p>&nbsp;</p>
-								</div>
-								<div class="pull-left" id="wait"
-									style="display: none; float: left">
-									<p>&nbsp;</p>
-								</div>
-							</td>
-						</tr>
-						<tr><td>Transfer Type:</td></tr>
-						<tr>
-							<td>
-								<div class="form-group" id="radioset">
-										<div class="pull-left" style="margin-left: 15px" th:if="${downloadType == 'datafile'}">
-											<label class="radio-inline"><input type="radio"
-											id="searchTypeSync" name="searchType" value="sync"
-											onChange="display('sync')" checked="checked" />Local System</label>
-										</div>
-										<div class="pull-left" style="margin-left: 15px">
-											<label class="radio-inline"><input type="radio"
-											name="searchType" id="searchTypeAsync" value="async"
-											onChange="display('async')"/>Globus</label>
-										</div>
-										<div class="pull-left" style="margin-left: 15px">
-											<label class="radio-inline"><input type="radio"
-											name="searchType" id="searchTypeS3" value="s3"
-											onChange="display('s3')"/>AWS S3</label>
-										</div>
-										<div class="pull-left" style="margin-left: 15px">
-											<label class="radio-inline"><input type="radio"
-											name="searchType" id="searchTypeDrive" value="drive"
-											onChange="display('drive')"/>Google Drive</label>
-										</div>
-										<div class="pull-left" style="margin-left: 15px">
-											<label class="radio-inline"><input type="radio"
-											name="searchType" id="searchTypeGoogleCloud" value="googleCloud"
-											onChange="display('googleCloud')"/>Google Cloud</label>
-										</div>
-										<div class="pull-left" style="margin-left: 15px">
-											<label class="radio-inline"><input type="radio"
-											name="searchType" id="searchTypeAspera" value="aspera"
-											onChange="display('aspera')"/>dbGaP</label>
-										</div>
-								</div>
-		                        
 		                        <div id="globus-help-links" style="display: none;">
                                     To download to Globus, DME should be provided write access to the targeted Globus endpoint.  Refer to <a href="https://wiki.nci.nih.gov/x/cAyKFg" target="_blank" title="Link to help document (opens in new tab or window)">Preparing to Use Globus with DME</a> for instructions.
                                     <br/><br/>
-                                </div>
-		                        
+                                </div> 
 								<div class="form-group" id="AsyncDiv" style="display: none">
 								    <div class="col-sm-12 column">
 										<label for="endPointName">Globus Endpoint UUID:</label> 
@@ -249,7 +238,6 @@
 											placeholder="Enter Region (for Example us-east-1)" size="40" />
 									</div>
 								</div>
-								
 								<div class="form-group" id="driveDiv" style="display: none">
 									<div class="col-sm-12 column">
 										<a class="btn btn-primary" id="driveAuthlink" 
@@ -334,7 +322,6 @@
 											placeholder="Enter Aspera Host" size="40" />
 									</div>
 								</div>
-
 								<div>
 									<button class="btn btn-primary" id="submit" th:if="${canDownload == 'true'}"
 										onClick="return validateAndSubmit()">Download</button>
@@ -343,16 +330,13 @@
 									<button th:if="${source != 'browse'}" type="button" class="btn btn-default"
 										onClick="goBack()" id="close">Back</button>
 								</div>
-							</td>
-						</tr>
-					</table>
-					<input type="hidden" name="destinationPath" id="destinationPathId"
-						th:value="${downloadFilePath}" />
-					<input type="hidden" name="downloadType" id="downloadType"
-						th:value="${downloadType}" />
-					<input type="hidden" name="transferType" id="transferType"
-						th:value="${transferType}" />
-                  </div>
+						<input type="hidden" name="destinationPath" id="destinationPathId"
+							th:value="${downloadFilePath}" />
+						<input type="hidden" name="downloadType" id="downloadType"
+							th:value="${downloadType}" />
+						<input type="hidden" name="transferType" id="transferType"
+							th:value="${transferType}" />
+	                  </div>
                  </div> 
                </form>
                <form class="form-horizontal" id="downloadSyncForm"
@@ -395,7 +379,7 @@
 						class="form-control" name="deselectedColumns" id="deselectedColumns"/>
 				</form>
             </div>
-          </div>
+          </div></div>
          </div>
         </div>
       </div>
