--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -330,9 +330,9 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', f
 				dom: 'rt',
 				scrollX : 'TRUE',
 				columnDefs: [ {targets: 0,  data: 'userId', width:100, visible: queryAll}, //userId
-							{targets: 1, data: 'taskId', data: 'taskId', width:250, visible: true},  // taskId
-							{targets: 2, data: 'result', width: 110, visible: true},  // source type
-							{targets: 3, data: 'sourceType', data: 'result', width: 100, visible: true},  // transfer result
+							{targets: 1, data: 'taskId', width:250, visible: true},  // taskId
+							{targets: 2, data: 'sourceType', width: 110, visible: true},  // source type
+							{targets: 3, data: 'result', width: 100, visible: true},  // transfer result
 							{targets: 4, data: 'created', width: 110, visible: true, orderData:[7]},  // created
 							{targets: 5, data: 'completed', width: 110, visible: true, orderData:[8]},  // completed
 							{targets: 6, data: 'error', width: 200, type: 'non-empty-string', render: DataTable.render.ellipsis( 40, true )}, // error
