--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -29,6 +29,12 @@
 	margin-top: 1px;
 	margin-bottom: 10px;
 }
+.radioMargin {
+	margin-right: 50px;
+}
+.leftMargin{
+	margin-left: -15px;
+}
 </style>
 <script th:inline="javascript">
 /*<![CDATA[*/
@@ -65,7 +71,7 @@
 
 		  <!--Row start-->
 		    <div class="row">
-			  <div class="col-lg-9 col-md-12">
+			  <div class="col-lg-12 col-md-12">
 			    <div class="panel panel-default">
 
 				  <div th:if="${restoreMsg != null}" class="alert alert-info" th:text="${restoreMsg}"></div>
@@ -117,7 +123,7 @@
                                 <!--  Globus block for download -->
 								<div th:replace = "downloadFragment.html :: globusDivFragment"></div>
 
-								<div class="form-group" id="SyncDiv" style="display: show" th:if="${downloadType == 'datafile'}">
+								<div id="SyncDiv" style="display: show" th:if="${downloadType == 'datafile'}">
 									<div class="col-sm-12 column">
 										<label for="downloadFileName">Download File Name:</label> <input
 											type="text" class="form-control"
@@ -134,8 +140,8 @@
 								<!-- Aspera/DbGap block -->
 								<div th:replace = "downloadFragment.html :: asperaBlock"></div>
 
-								<div class="form-group" th:if="${downloadType == 'collection'}" style="margin-top: -10px; margin-bottom: -1px">
-									<div class="col-sm-12 column" id="radioset2">
+								<div th:if="${downloadType == 'collection'}" style="margin-top: 15px; margin-bottom: -1px">
+									<div class="col-sm-12 column" id="radioset2" style="margin-left: -15px; margin-top: -3px">
 											<label for="downloadDestinationType">Destination Location:</label>
 											<select name="downloadDestinationType" id="downloadDestinationType" class="form-control fieldWidth" size="1" style="margin-top: 1px; margin-bottom: -16px;">
 												<option th:value="'downloadToDestination'" th:text="'Endpoint Path'"></option>
