--- a/src/hpc-web/src/main/resources/templates/downloadfiles.html
+++ b/src/hpc-web/src/main/resources/templates/downloadfiles.html
@@ -69,6 +69,12 @@
 	margin-top: 1px;
 	margin-bottom: 10px;
 }
+.radioMargin {
+	margin-right: 50px;
+}
+.leftMargin{
+	margin-left: -15px;
+}
 </style>
 <script th:inline="javascript">
 /*<![CDATA[*/
@@ -100,7 +106,7 @@
 				<!--Title End-->
 				<!--Row start-->
 				<div class="row">
-					<div class="col-lg-9 col-md-12">
+					<div class="col-lg-12 col-md-12">
 						<div class="panel panel-default">
 							
 		<form class="form-horizontal" id="downloadFilesForm"
@@ -153,7 +159,7 @@
 					<!-- Aspera/DbGap block -->
 					<div th:replace = "downloadFragment.html :: asperaBlock"></div>
 
-					<div class="modal-footer">
+					<div style="margin-left: 3px; margin-top: 15px">
 						<button class="btn btn-primary" id="submit" th:if="${canDownload == 'true'}"
 							onClick="return validateAndSubmit()">Download</button>
 						<button class="btn btn-primary" id="nosubmit" title="Dataset size exceeds max download limit"
