HPCDATAMGM-1957: Add verb phrase to match other destination location options. Also add space to Google Authorize button

--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -144,7 +144,7 @@
 									<div class="col-sm-12 column" id="radioset2" style="margin-left: -15px; margin-top: -3px">
 											<label for="downloadDestinationType">Destination Location:</label>
 											<select name="downloadDestinationType" id="downloadDestinationType" class="form-control fieldWidth" size="1" style="margin-top: 1px; margin-bottom: -16px;">
-												<option th:value="'downloadToDestination'" th:text="'Endpoint Path'"></option>
+												<option th:value="'downloadToDestination'" th:text="'Download to Endpoint Path'"></option>
 												<option th:value="'createCollectionFolder'" th:text="'Create Parent Collection'"></option>
 												<option th:value="'createFullPath'" th:text="'Replicate Full Source Path'"></option>
 											</select>
