--- a/src/hpc-web/src/main/resources/templates/downloadfiles.html
+++ b/src/hpc-web/src/main/resources/templates/downloadfiles.html
@@ -62,19 +62,6 @@
 .btn[disabled] {
     pointer-events: auto;
 }
-.fieldWidth {
-	width: 600px;
-}
-.fieldMargin {
-	margin-top: 1px;
-	margin-bottom: 10px;
-}
-.radioMargin {
-	margin-right: 50px;
-}
-.leftMargin{
-	margin-left: -15px;
-}
 </style>
 <script th:inline="javascript">
 /*<![CDATA[*/
@@ -106,7 +93,7 @@
 				<!--Title End-->
 				<!--Row start-->
 				<div class="row">
-					<div class="col-lg-12 col-md-12">
+					<div class="col-lg-9 col-md-12">
 						<div class="panel panel-default">
 							
 		<form class="form-horizontal" id="downloadFilesForm"
@@ -118,55 +105,219 @@
 							for="${error}" th:text="${error}"></label>
 					</div>
 				</div>
-				<div class="panel-body"> <div style="display:flex; flex-direction: column; align-items:left">
-					<div class="pull-center" id="msgDownloadType" ></div>
-					<br/>
-					Selected Files:<br/>
-					<div class="display: block;" style="word-break: break-all" th:each="selectedPath : ${hpcDownloadDatafile.getSelectedPaths()}">
-						<label th:text="${selectedPath}"></label> 
-					</div>
-					<br/>
-				    <div th:if="${canDownload != 'true'}" class="alert alert-danger" th:utext="${downloadSizeExceededMsg}"></div>
-					<div class="alert alert-info pull-left" role="alert" id="message"
-						style="display: none; float: left">
-						<p>&nbsp;</p>
-					</div>
-					<div class="pull-left" id="wait"
-						style="display: none; float: left">
-						<p>&nbsp;</p>
-					</div>
-					<!--  Radio buttons for selecting the download destination source -->
-					<div th:replace = "downloadFragment.html :: downloadSelectFragment"></div>
-					<!--  Globus Help Links -->
-                             <div th:replace = "downloadFragment.html :: globusHelpFragment"></div>
-                             <!--  Globus block for download -->
-					<div th:replace = "downloadFragment.html :: globusDivFragment"></div>
-
-					<div class="form-group" id="SyncDiv" style="display: show" th:if="${downloadType == 'datafile'}">
-						<div class="col-sm-12 column">
-							<label for="downloadFileName">Download File Name:</label> <input
-								type="text" class="form-control"
-								id="downloadFileName" size="45" name="downloadFileName" th:value="${downloadFilePathName}"
-								placeholder="Enter Download File Name" />
+				<div class="panel-body">
+					<table>
+						<tr>
+							<td>
+								<div class="pull-center" id="msgDownloadType" ></div>
+							</td>
+						</tr>
+						<tr><td>&nbsp;</td></tr>
+						<tr><td>Selected Files:<br/>
+						<div class="display: block;" style="word-break: break-all" th:each="selectedPath : ${hpcDownloadDatafile.getSelectedPaths()}">
+							<label th:text="${selectedPath}"></label> 
 						</div>
-					</div>
-					<!-- AWS block -->
-					<div th:replace = "downloadFragment.html :: awsBlock"></div>
-					<!-- Google Drive block -->
-					<div th:replace = "downloadFragment.html :: googleDriveBlock"></div>
-					<!-- Google Cloud block -->
-					<div th:replace = "downloadFragment.html :: googleCloudBlock"></div>
-					<!-- Aspera/DbGap block -->
-					<div th:replace = "downloadFragment.html :: asperaBlock"></div>
+						</td></tr>
+						<tr><td>&nbsp;</td></tr>
+						<tr>
+							<td>
+							    <div th:if="${canDownload != 'true'}" class="alert alert-danger" th:utext="${downloadSizeExceededMsg}"></div>
+								<div class="alert alert-info pull-left" role="alert" id="message"
+									style="display: none; float: left">
+									<p>&nbsp;</p>
+								</div>
+								<div class="pull-left" id="wait"
+									style="display: none; float: left">
+									<p>&nbsp;</p>
+								</div>
+							</td>
+						</tr>
+						<tr><td>Transfer Type:</td></tr>
+						<tr>
+							<td>
+								<div class="form-group">
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+											name="searchType" id="searchTypeAsync" value="async"
+											onChange="display('async')"/>Globus</label>
+										</div>
+										
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+											name="searchType" id="searchTypeS3" value="s3"
+											onChange="display('s3')"/>AWS S3</label>
+										</div>
+										
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+											name="searchType" id="searchTypeDrive" value="drive"
+											onChange="display('drive')"/>Google Drive</label>
+										</div>
 
-					<div style="margin-left: 3px; margin-top: 15px">
-						<button class="btn btn-primary" id="submit" th:if="${canDownload == 'true'}"
-							onClick="return validateAndSubmit()">Download</button>
-						<button class="btn btn-primary" id="nosubmit" title="Dataset size exceeds max download limit"
-							th:if="${canDownload != 'true'}" disabled="true">Download</button>
-						<button type="button" class="btn btn-default"
-							onClick="goBack()" id="close">Back</button>
-					</div>
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+											name="searchType" id="searchTypeGoogleCloud" value="googleCloud"
+											onChange="display('googleCloud')"/>Google Cloud</label>
+										</div>
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+											name="searchType" id="searchTypeAspera" value="aspera"
+											onChange="display('aspera')"/>dbGaP</label>
+										</div>
+								</div>
+								
+								<div class="pull-center" id="AsyncTextDiv" style="display: none">
+								    <p>To download to Globus, DME should be provided write access to the targeted Globus endpoint.  Refer to <a href="https://wiki.nci.nih.gov/x/cAyKFg" target="_blank" title="Link to help document (opens in new tab or window)">Preparing to Use Globus with DME</a> for instructions.</p>
+								    <br/>
+								</div>
+                                
+                                <div class="form-group" id="AsyncDiv" style="display: none">
+                                    <div class="col-sm-12 column">
+										<label for="endPointName">Globus Endpoint UUID:</label> 
+										<a id="downloadlink"
+										    th:href="@{../downloadfiles(transferType=globus)}">
+                                            Obtain from Globus (Optional)</a>
+										<input type="hidden" name="actionType" id="actionType" />
+										<input
+											type="text" class="form-control" name="endPointName" th:value="${endPointName}"
+											id="endPointName" placeholder="Enter Globus Endpoint UUID" />
+								    </div>								
+									<div class="col-sm-12 column">
+										<label for="endPointLocation">Endpoint Path:</label> <input
+											type="text" class="form-control" name="endPointLocation"
+											th:value="${endPointLocation}" id="endPointLocation"
+											placeholder="Enter Globus Endpoint Path" size="40" />
+									</div>
+								</div>
+								<div class="form-group" id="s3Div" style="display: none">
+									<div class="col-sm-12 column">
+										<label for="bucketName">S3 Bucket:</label>
+										<input
+											type="text" class="form-control" name="bucketName" th:value="${bucketName}"
+											id="bucketName" placeholder="Enter S3 Bucket Name" />
+									</div>
+									<div class="col-sm-12 column">
+										<label for="s3Path">Endpoint Path:</label> <input
+											type="text" class="form-control"
+											th:value="${s3Path}"
+											name="s3Path" id="s3Path"
+											placeholder="Enter S3 Endpoint Path" size="40" />
+									</div>
+									<div class="col-sm-12 column">
+										<label for="accessKey">Access Key:</label> <input
+											type="text" class="form-control"
+											th:value="${accessKey}"
+											name="accessKey" id="accessKey"
+											placeholder="Enter Access Key" size="40" />
+									</div>
+									<div class="col-sm-12 column">
+										<label for="secretKey">Secret Access Key:</label> <input
+											type="password" autocomplete="secret-access-key" class="form-control"
+											th:value="${secretKey}"
+											name="secretKey" id="secretKey"
+											placeholder="Enter Secret Access Key" size="40" />
+									</div>
+									<div class="col-sm-12 column">
+										<label for="region">Region:</label> <input
+											type="text" class="form-control"
+											th:value="${region}"
+											name="region" id="region"
+											placeholder="Enter Region (for Example us-east-1)" size="40" />
+									</div>
+								</div>
+								<div class="form-group" id="driveDiv" style="display: none">
+									<div class="col-sm-12 column">
+										<a class="btn btn-primary" id="driveAuthlink" 
+                                            th:href="@{../downloadfiles(transferType=drive)}">                                  
+                                            Authorize DME to Access Your Google Drive</a>
+									</div>
+									<div th:if="${authorized != null}" class="alert-success"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
+									<br/>
+									<div class="col-sm-12 column">
+										<label for="drivePath">Endpoint Path:</label>
+										<a th:if="${authorized != null}" id="pickerLink" onclick="loadDownloadPicker()" style="cursor:pointer">
+											Select from Google Drive (Optional)</a>
+										<input
+											type="text" class="form-control"
+											th:value="${drivePath}"
+											name="drivePath" id="drivePath"
+											placeholder="Enter Google Drive Endpoint Path" size="40" />
+									</div>
+								</div>
+								<div class="form-group" id="googleCloudDiv" style="display: none">
+									<div class="col-sm-12 column">
+										<a class="btn btn-primary" id="googleCloudAuthlink"
+                                            th:href="@{../downloadfiles(transferType=googleCloud)}">
+                                            Authorize DME to Access Your Google Cloud</a>
+									</div>
+									<div th:if="${authorizedGC != null}" class="alert-success"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
+									<br/>
+									<div class="col-sm-12 column">
+										<label for="googleCloudBucketName">Google Cloud Bucket</label>
+										<input
+											type="text" class="form-control" name="googleCloudBucketName" th:value="${googleCloudBucketName}"
+											id="googleCloudBucketName" placeholder="Enter Google Cloud Bucket Name" />
+									</div>
+									<div class="col-sm-12 column">
+										<label for="googleCloudPath">Endpoint Path:</label>
+										<input
+											type="text" class="form-control"
+											th:value="${googleCloudPath}"
+											name="googleCloudPath" id="googleCloudPath"
+											placeholder="Enter Google Cloud Endpoint Path" size="40" />
+									</div>
+								</div>
+								<!--- DbGap inputs -->
+								<div class="form-group" id="asperaDiv" style="display: none">
+									<div class="col-sm-12 column">
+										<label for="asperaBucketName">Aspera Destination Directory:</label>
+										<div th:if="${asperaBucketName == 'test'}" id="oneOption">
+											<select name="asperaBucketName" id="asperaBucketName" class="form-control">
+												<option th:value="test" th:text="test" selected="selected"></option>
+											</select>
+										</div>
+										<div th:if="${asperaBucketName != 'test'}"  id="multipleOption">
+											<select name="asperaBucketName" id="asperaBucketName" class="form-control">
+												<option th:value="${asperaBucketName}" th:text="${asperaBucketName}" selected="selected"></option>
+												<option th:value="test" th:text="test" ></option>
+											</select>
+										</div>
+									</div>
+									<div class="col-sm-12 column">
+										<label for="accessKey">Aspera Account User:</label> <input
+											type="text" class="form-control"
+											th:value="${asperaUser}"
+											name="asperaUser" id="asperaUser"
+											placeholder="Enter User" size="40" />
+									</div>
+									<input type="hidden" name="asperaPath" id="asperaPath"
+											th:value="${asperaPath}" />
+									<div class="col-sm-12 column">
+										<label for="secretKey">Aspera Account Password:</label> <input
+											type="password" autocomplete="secret-access-key" class="form-control"
+											th:value="${asperaPassword}"
+											name="asperaPassword" id="asperaPassword"
+											placeholder="Enter Aspera Password" size="40" />
+									</div>
+									<div class="col-sm-12 column">
+										<label for="region">Aspera Host:</label> <input
+											type="text" class="form-control"
+											th:value="${asperaHost}"
+											name="asperaHost" id="asperaHost"
+											placeholder="Enter Aspera Host" size="40" />
+									</div>
+								</div>
+								<div class="modal-footer">
+									<button class="btn btn-primary" id="submit" th:if="${canDownload == 'true'}"
+										onClick="return validateAndSubmit()">Download</button>
+									<button class="btn btn-primary" id="nosubmit" title="Dataset size exceeds max download limit"
+										th:if="${canDownload != 'true'}" disabled="true">Download</button>
+									<button type="button" class="btn btn-default"
+										onClick="goBack()" id="close">Back</button>
+								</div>
+							</td>
+						</tr>
+					</table>
 					<input type="hidden" name="destinationPath" id="destinationPathId"
 						th:value="${downloadFilePath}" />
 					<input type="hidden" name="downloadType" id="downloadType"
@@ -176,7 +327,7 @@
 					<input type="hidden" name="transferType" id="transferType"
 						th:value="${transferType}" />
 				</div>
-			</div></div>
+			</div>
 		</form>
 		<form class="form-horizontal" id="downloadSyncForm"
 			th:object="${hpcDownloadDatafile}" method="POST" th:action="@{/downloadfiles}">
@@ -420,7 +571,7 @@
 		function display(value) {
 			var asyncDiv = document.getElementById("AsyncDiv");
 			var s3Div = document.getElementById("s3Div");
-			var asyncTextDiv = document.getElementById("globus-help-links");
+			var asyncTextDiv = document.getElementById("AsyncTextDiv");
 			var driveDiv = document.getElementById("driveDiv");
 			var googleCloudDiv = document.getElementById("googleCloudDiv");
 			if (value == "async") {
