HPCDATAMGM-1957: Change buttons to be on the left, to match the single download screen

--- a/src/hpc-web/src/main/resources/templates/downloadfiles.html
+++ b/src/hpc-web/src/main/resources/templates/downloadfiles.html
@@ -307,7 +307,7 @@
 											placeholder="Enter Aspera Host" size="40" />
 									</div>
 								</div>
-								<div class="modal-footer">
+								<div style="margin-left: 3px; margin-top: 15px">
 									<button class="btn btn-primary" id="submit" th:if="${canDownload == 'true'}"
 										onClick="return validateAndSubmit()">Download</button>
 									<button class="btn btn-primary" id="nosubmit" title="Dataset size exceeds max download limit"
