--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -723,8 +723,8 @@ window.onclick = function(event) {
 										</label>
 									</div>
 									<div class="pull-right">
-										<label> Global Metadata Search
-											<input name="globalMetadataSearchText" id="globalMetadataSearchTextId" placeholder="Global Metadata Search" style="height: 30px"  th:value="${globalMetadataSearchText}" >
+										<label> Search Metadata
+											<input name="globalMetadataSearchText" id="globalMetadataSearchTextId" style="height: 30px"  th:value="${globalMetadataSearchText}" >
 										</label>
 									</div>
 								</div>
