--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
@@ -65,7 +65,8 @@
     var selectedRowsData = [];
     var totalSize = [[${totalSize}]];
     var deselectedColumns = [[${deselectedColumns}]];
-    var fileExportRowsThreshold = [[${fileExportRowsThreshold}]];    
+    var fileExportRowsThreshold = [[${fileExportRowsThreshold}]];
+    var globalMetadataSearchText = [[${globalMetadataSearchText}]];
 /*]]>*/
 </script>
 
@@ -723,6 +724,11 @@ window.onclick = function(event) {
 										><i class="fa fa-link" title="Create Links for Selected Data Files"></i></a>
 									<label id="totalSizeLabel" class="btn btn-sm" style="display:none">Total Size of Selected Data Files: <strong id="totalSizeDisplay"></strong></label>
 								</div>
+								<div class="pull-right">
+									<label> Search Metadata
+										<input name="globalMetadataSearchText" id="globalMetadataSearchTextId" style="height: 30px"  th:value="${globalMetadataSearchText}" >
+									</label>
+								</div>
 							  </div>
 								<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
 									aria-labelledby="myModalLabel" aria-hidden="true">
@@ -780,6 +786,7 @@ window.onclick = function(event) {
 						<input type="hidden" id="selectedFilePaths" name="selectedFilePaths" value=""/>
 						<input type="hidden" id="totalSize" name="totalSize"/>
 						<input type="hidden" id="deselectedColumns" name="deselectedColumns" value=""/>
+						<input type="hidden" id="globalMetadataSearchText" name="globalMetadataSearchText"/>
 					</form> 
 					<form class="form-horizontal" id="downloadFilesform" action="#"
 						role="form" th:action="@{/downloadfiles}" 
@@ -851,7 +858,16 @@ window.onclick = function(event) {
 			$('#showExportLink').hide(); 
 		}
 	});
-	
+
+	$('#globalMetadataSearchTextId').keypress(function(event) {
+	    if (event.which === 13) {
+	      event.preventDefault();
+	      document.getElementById("simplesearchform").elements.namedItem("globalMetadataSearchText").value =  this.value;
+	      globalMetadataSearchText = this.value;
+		  updatePage('first', 100);
+	    }
+	  });
+
     function updatePage(action, newPageSize)
     {
 
