HPCDATAMGM-1930: Add delete icon in search box

--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
@@ -122,6 +122,21 @@
 }
 
 .show {display: block;}
+
+#searchInput {
+    width: 200px;
+}
+#searchClear {
+    position: absolute;
+    right: 5px;
+    top: 0;
+    bottom: 0;
+    height: 14px;
+    margin: auto;
+    font-size: 14px;
+    cursor: pointer;
+    color: #ccc;
+}
 </style>
 <script>
 /* When the user clicks on the button, 
@@ -725,9 +740,14 @@ window.onclick = function(event) {
 									<label id="totalSizeLabel" class="btn btn-sm" style="display:none">Total Size of Selected Data Files: <strong id="totalSizeDisplay"></strong></label>
 								</div>
 								<div class="pull-right">
-									<label> Search Metadata
-										<input name="globalMetadataSearchText" id="globalMetadataSearchTextId" style="height: 30px"  th:value="${globalMetadataSearchText}" >
-									</label>
+									<div class="btn-group">
+										<label> Search Metadata <input type="search"
+											name="globalMetadataSearchText" id="searchInput"
+											style="height: 30px" th:value="${globalMetadataSearchText}">
+											<span id="searchClear"
+											class="glyphicon glyphicon-remove-circle"></span>
+										</label>
+									</div>
 								</div>
 							  </div>
 								<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
@@ -859,7 +879,7 @@ window.onclick = function(event) {
 		}
 	});
 
-	$('#globalMetadataSearchTextId').keypress(function(event) {
+	$('#searchInput').keypress(function(event) {
 	    if (event.which === 13) {
 	      event.preventDefault();
 	      document.getElementById("simplesearchform").elements.namedItem("globalMetadataSearchText").value =  this.value;
@@ -867,6 +887,11 @@ window.onclick = function(event) {
 		  updatePage('first', 100);
 	    }
 	  });
+
+	$("#searchClear").click(function(){
+	    $("#searchInput").val('');
+	    updatePage('first', currentPageSize);
+	});
 
     function updatePage(action, newPageSize)
     {
